@@ -2,16 +2,16 @@
 
 set -e
 
-. $(pwd)/common.sh
+. "$(pwd)/common.sh"
 
 printf "Test seccomp filter (bad - too long)"
 
-cat >$TMP/snap.name.app <<EOF
+cat >"$TMP/snap.name.app" <<EOF
 # some comment
 baddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
 EOF
 
-if $L snap.name.app /bin/true 2>/dev/null; then
+if "$L" snap.name.app /bin/true 2>/dev/null; then
     # true returned successfully, length test failed
     FAIL
 fi
