@@ -2,13 +2,13 @@
 
 set -e
 
-. $(pwd)/common.sh
+. "$(pwd)/common.sh"
 
 printf "Test seccomp filter (bad - no trailing newline)"
 
-echo -n "missingnewline" > $TMP/snap.name.app
+printf "missingnewline" > "$TMP/snap.name.app"
 
-if $L snap.name.app /bin/true 2>/dev/null; then
+if "$L" snap.name.app /bin/true 2>/dev/null; then
     # true returned successfully, length test failed
     FAIL
 fi
